frank's content change

--- a/index.html
+++ b/index.html
@@ -176,18 +176,18 @@
           <div class="column zh">
             <h2>歡迎來到 2025 草率季 - Soft POW 無限柔軟</h2>
             <p>
-              感謝您對草率季-台北藝術書展的支持，2025年我們邁入第9屆，並命題「Soft
-              POW 無限柔軟
-              」，歡迎上車！在您繼續提交申請之前，請耐心閱讀以下參展條件，申請即表示您同意並接受。
+              感謝您對草率季-台北藝術書展的支持，2025年第9屆草率季「Soft POW
+              無限柔軟
+              」徵件開始，在您繼續提交申請前，請耐心閱讀以下參展條件，申請即表示您已閱讀、了解並同意並接受。
             </p>
             <br />
             <h3>書展資訊</h3>
             <div>
-              <span>時間: </span>11/21（五）13:00–21:00<br />
+              <span>時間: </span>11月21日（五）13:00–21:00<br />
               <span style="visibility: hidden">時間: </span
-              >11/22（六）11:00–20:00<br />
+              >11月22日（六）11:00–20:00<br />
               <span style="visibility: hidden">時間: </span
-              >11/23（日）11:00–18:00
+              >11月23日（日）11:00–18:00
             </div>
             <p>
               地點: 華山1914文化創意產業園區 東二 ABCD棟
@@ -205,28 +205,30 @@
             <br />
             <h3>申請時程</h3>
             <p>
-              申請截止：2025/06/15（日）24:00<br />
-              審核通知：2025/06/30（一）12:00<br />
-              &nbsp;&nbsp;&nbsp; &bull; 通過者須於
-              2025/07/13（日）24:00前付款<br />
-              備取名單通知：2025/07/16（三）24:00<br />
-              &nbsp;&nbsp;&nbsp; &bull; 備取者須於
-              2025/07/22（二）24:00前付款<br />
+              申請截止：6月15日（日）24:00<br />
+              審核通知：6月30日（一）12:00<br />
+              &nbsp;&nbsp;&nbsp; &bull; 通過者須於 7月13日（日）24:00前付款<br />
+              備取名單通知：7月16日（三）24:00<br />
+              &nbsp;&nbsp;&nbsp; &bull; 備取者須於 7月22日（二）24:00 前付款<br />
             </p>
             <br />
             <h3>在展會上</h3>
             <p>
               &bull;
-              主辦單位將依整體展場佈局統一安排攤位位置，為公平起見，平面圖完成前後皆不接受位置偏好申請。<br />
-              &bull; 我們將於 9
-              月提供攤位樣式示意圖，並於展會前一天公布最終配置。<br />
+              主辦單位將依整體展場佈局統一安排攤位位置，為公平起見，平面圖完成前後皆不接受位置偏好申請，並於展會前一天公布最終配置。<br />
+              &bull; 我們將於 9 月提供攤位樣式示意圖。<br />
               &bull; 立面展示因場地空間限制隨機分配，且可能與其他單位共用。
             </p>
-            <br />
+            <br /><br />
             <h3>展位類型</h3>
+            <p>
+              錄取參展單位將獲得資格於2025年草率簿中露出個人宣傳一頁，並獲得
+              2025 草率簿一本。
+            </p>
+            <br />
             <p><strong>ㄧ般書攤 ｜5,000 元（含稅）</strong></p>
             <p>
-              針對以書本為主要創作／販售的參展單位，申請時需提出三本以上的書及審查資料。<br />
+              針對以書本為主要創作／販售的參展單位，申請時需提出三本以上已出版刊物及審查資料。<br />
               &nbsp;&nbsp;&nbsp; &bull; 基礎設備：桌面（120*60cm) 1 個、椅子 2
               張、工作證 2 張、草率簿 1 本（含露出一面）
             </p>
@@ -255,23 +257,17 @@
             </p>
             <blockquote>
               <small
-                >*每個單位可於繳費階段可加購1張工作證，工作證僅限持證人本人使用，不得轉讓或借用；因場地空間有限，攤位人數超過3人者請另行申請攤位。如需臨時輪班，可於購票階段購買「親友票」。
+                >*每單位於繳費階段可加購1張工作證，工作證僅限持證人本人使用，不得轉讓或借用；因場地空間有限，攤位人數超過3人者請另行申請攤位。如需臨時輪班，可於購票階段購買「親友票」。
               </small>
             </blockquote>
-            <br />
-            <h3>關於2024草率季</h3>
-            <p>
-              &bull; 450 參展單位（200 國際單位／250 本地單位），來自 30+
-              國家／地區 <br />&bull; 12,000名付費遊客
-            </p>
             <br />
             <h3>迎接 草率十年</h3>
             <p>
               2026年，草率季十週年，我們將舉辦草率十年特場（預計將落在 3–4
               月）。在十歲之際，我們將回到更實驗的精神持續探索藝術書展的更多可能，在此誠摯邀請您填寫本報名表時一併回覆
-              2026 年度參展意願，一起跳上草率季的全新旅程！<br /><br />
+              2026 年度參展意願，跳上草率季的全新旅程！<br /><br />
 
-              展期我們將試進度優先公布予有意願參展的各位，場地、精彩亮點等資訊會在2025
+              展期將試進度優先公布予有意願參展的各位，場地、精彩亮點等資訊則於2025
               年草率季現場公布公開，敬請期待！
             </p>
             <br />
@@ -328,25 +324,31 @@
             <p>
               Deadline to Apply: June 15, 2025 (Sun) 24:00<br />
               Acceptance Notices: June 30, 2025 (Mon) 12:00<br />
-              &nbsp;&nbsp;&nbsp; &bull; Successful applicants must pay by July
-              13 (Sun) 24:00<br />
+              &nbsp;&nbsp;&nbsp; &bull; Successful applicants complete the
+              payment by July 13 (Sun) 24:00<br />
               Waitlist Notices: July 16, 2025 (Wed) 24:00<br />
-              &nbsp;&nbsp;&nbsp; &bull; Waitlisted applicants must pay by July
-              22 (Tue) 24:00<br />
+              &nbsp;&nbsp;&nbsp; &bull; Waitlisted applicants must complete the
+              payment by July 22 (Tue) 24:00<br />
             </p>
             <br />
             <h3>At the Fair</h3>
             <p>
               &bull; Booth locations will be assigned by the organizers
               according to the overall floor plan; preferences cannot be
-              accommodated before or after layout finalization.<br />
-              &bull; In September we’ll share booth-style mockups; final floor
-              plan published one day before opening.<br />
+              accommodated before or after layout finalization; final floor plan
+              will be published one day before opening.
+              <br />
+              &bull; In September we’ll share booth-style mockups<br />
               &bull; Wall displays are allocated at random and may be shared
               with neighboring booths.
             </p>
             <br />
             <h3>Booth Types</h3>
+            <p>
+              Starting from 2025, we will issue TPABF Catalog that includes all
+              exhibitors’ promotion pages each year. And the admitted exhibitor
+              can recieve one free copy.
+            </p>
             <p><strong>One Regular Booth USD$165 incl. tax</strong></p>
             <p>
               &nbsp;&nbsp;&nbsp; &bull; Includes: 120 × 60 cm table ×1, chairs
@@ -374,13 +376,6 @@
               </small>
             </blockquote>
             <br />
-            <h3>Last Year’s Highlights</h3>
-            <p>
-              &bull; 450 exhibiting units (200 international, 250 local) from
-              30+ countries/regions<br />
-              &bull; 12,000 paid visitors
-            </p>
-            <br />
             <h3>Preparing for Taipei Art Book Fair’s 10-year anniversary</h3>
             <p>
               2026 marks the tenth year of Taipei Art Book Fair. We here at
@@ -396,6 +391,14 @@
               can’t wait moving on to the new/experimental journey with you!
               Stay tuned!
             </p>
+            <br />
+            <h3>Last Year’s Highlights</h3>
+            <p>
+              &bull; 450 exhibiting units (200 international, 250 local) from
+              30+ countries/regions<br />
+              &bull; 12,000 paid visitors
+            </p>
+
             <br />
             <h3>Contact</h3>
             <p>hooroo@double-grass.com</p>
