--- a/index.html
+++ b/index.html
@@ -228,30 +228,30 @@
             <br />
             <p><strong>ㄧ般書攤 ｜5,000 元（含稅）</strong></p>
             <p>
-              針對以書本為主要創作／販售的參展單位，申請時需提出三本以上已出版刊物及審查資料。<br />
-              &nbsp;&nbsp;&nbsp; &bull; 基礎設備：桌面（120*60cm) 1 個、椅子 2
-              張、工作證 2 張、草率簿 1 本（含露出一面）
+              針對以書本為主要創作／販售的參展單位，申請時需提出三本以上已出版刊物及審查資料。
+              &bull; 基礎設備：桌面（120*60cm) 1 個、椅子 2 張、工作證 2
+              張、草率簿 1 本（含露出一面）
             </p>
             <br />
 
             <p><strong>創作攤｜8,000 元（含稅） </strong></p>
             <p>
-              針對以各類商品為主要創作／販售的參展單位。<br />
-              &nbsp;&nbsp;&nbsp; &bull; 基礎設備：桌面（120*60cm) 1 個、椅子 2
-              張、工作證 2 張、草率簿 1 本（含露出一面）
+              針對以各類商品為主要創作／販售的參展單位。 &bull;
+              基礎設備：桌面（120*60cm) 1 個、椅子 2 張、工作證 2 張、草率簿 1
+              本（含露出一面）
             </p>
             <br />
 
             <p><strong>裝置攤｜10,000 元（含稅）</strong></p>
             <p>
-              針對大型裝置或空間創作為主的參展單位。&nbsp;&nbsp;
+              針對大型裝置或空間創作為主的參展單位。 &bull;
               基礎設備：1.5M*1.5M空地、工作證 2 張、草率簿 1 本（含露出一面）
             </p>
             <br />
 
             <p><strong>食物酒水攤｜13,000 元（含稅</strong></p>
             <p>
-              針對以食物或飲品為主要販售類型的單位。 &nbsp;&nbsp;
+              針對以食物或飲品為主要販售類型的單位。 &bull;
               基礎設備：桌面（180*60cm) 1 個、椅子 2 張、工作證 2 張、草率簿 1
               本（含露出一面）
             </p>
@@ -295,11 +295,11 @@
               applying, you agree to abide by them.
             </p>
             <div>
-              <span>Dates & Times</span>
+              <span>Dates & Times: </span>
               Nov 21 (Fri) 13:00–21:00<br />
-              <span style="visibility: hidden">Dates & Times</span>
+              <span style="visibility: hidden">Dates & Times: </span>
               Nov 22 (Sat) 11:00–20:00<br />
-              <span style="visibility: hidden">Dates & Times</span>
+              <span style="visibility: hidden">Dates & Times: </span>
               Nov 23 (Sun) 11:00–18:00
             </div>
             <p>
@@ -322,13 +322,13 @@
             <br />
             <h3>Deadline</h3>
             <p>
-              Deadline to Apply: June 15, 2025 (Sun) 24:00<br />
-              Acceptance Notices: June 30, 2025 (Mon) 12:00<br />
+              Deadline to Apply: <i>June 15, 2025 (Sun) 24:00</i><br />
+              Acceptance Notices: <i>June 30, 2025 (Mon) 12:00</i><br />
               &nbsp;&nbsp;&nbsp; &bull; Successful applicants complete the
-              payment by July 13 (Sun) 24:00<br />
-              Waitlist Notices: July 16, 2025 (Wed) 24:00<br />
+              payment by <i>July 13 (Sun) 24:00</i><br />
+              Waitlist Notices: <i>July 16, 2025 (Wed) 24:00</i><br />
               &nbsp;&nbsp;&nbsp; &bull; Waitlisted applicants must complete the
-              payment by July 22 (Tue) 24:00<br />
+              payment by <i>July 22 (Tue) 24:00</i><br />
             </p>
             <br />
             <h3>At the Fair</h3>
@@ -349,22 +349,23 @@
               exhibitors’ promotion pages each year. And the admitted exhibitor
               can recieve one free copy.
             </p>
+            <br />
             <p><strong>One Regular Booth USD$165 incl. tax</strong></p>
             <p>
-              &nbsp;&nbsp;&nbsp; &bull; Includes: 120 × 60 cm table ×1, chairs
-              ×2, passes ×2, TPABF Catalog ×1 (one page featured)
+              &bull; Includes: 120 × 60 cm table ×1, chairs ×2, passes ×2, TPABF
+              Catalog ×1 (one page featured)
             </p>
             <br />
             <p><strong>Two Regular Booth USD$330 incl. tax</strong></p>
             <p>
-              &nbsp;&nbsp;&nbsp; &bull; Includes: 120 × 60 cm table ×2, chairs
-              ×4, passes ×4, TPABF Catalog ×1 (one page featured)
+              &bull; Includes: 120 × 60 cm table ×2, chairs ×4, passes ×4, TPABF
+              Catalog ×1 (one page featured)
             </p>
             <br />
             <p><strong>Curation Booth USD$780 incl. tax</strong></p>
             <p>
-              &nbsp;&nbsp;&nbsp; &bull; Includes: 3M*3M space, 120 × 60 cm table
-              ×2, chairs ×4, passes ×3, TPABF Catalog ×1 (one page featured)
+              &bull; Includes: 3M*3M space, 120 × 60 cm table ×2, chairs ×4,
+              passes ×3, TPABF Catalog ×1 (one page featured)
             </p>
 
             <blockquote>
