double check the form requires

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!-- This website's front-end is designed and rushly coded by Nai-Syuan Ye(cherrythehuman).
+Po-Chen Yeh and Bo-yu Yeh are the back-end developers. This serves merely as a buffering site before the true 2025 TPABF site is up.
+
+Special thanks to Doğa Gönüllü and Merle Findhammer for being my eyes and providing some quirks, and of course the whole team of TPABF for giving me so much freedom<3 
+
+www.naisyuanye.com
+https://github.com/taipeiartbookfair-doublegrass/taipeiartbookfair.github.io -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
