--- a/localapplication.html
+++ b/localapplication.html
@@ -57,7 +57,7 @@
             maxlength="150"
             required
             pattern="^[\u4e00-\u9fa5a-zA-Z0-9\s]+$"
-            title="Please do not enter special characters."
+            title="請勿輸入特殊符號"
           />
         </div>
       </div>
@@ -407,6 +407,7 @@
             placeholder="商品品項。例：五金雕塑、鑰匙圈、飲品⋯⋯"
             maxlength="1000"
             style="width: 100%"
+            required
           ></textarea>
         </div>
         <!-- work link -->
@@ -437,6 +438,7 @@
               name="entry.715764736"
               id="uploadedFileUrl"
               value="some-unique-id-or-timestamp"
+              required
             />
             <input type="hidden" name="category" value="artwork" />
           </div>
@@ -622,7 +624,6 @@
             name="entry.1381238601"
             id="early_signup_2026"
             value="要報名"
-            required
           />
           <label for="early_signup_2026" class="form-label-10y">
             我要搶先報名 2026 春季草率十年特場！
