--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -60,7 +60,7 @@
             maxlength="150"
             required
             pattern="^[\u4e00-\u9fa5a-zA-Z0-9\s]+$"
-            title="請勿輸入特殊符號"
+            title="Please do not enter special characters."
           />
         </div>
       </div>
@@ -817,7 +817,6 @@
             name="entry.427732833"
             id="early_signup_2026"
             value="要報名"
-            required
           />
           <label for="early_signup_2026" class="form-label-10y">
             Count me in for 2026 Spring TPABF 10-year anniversary fair！
