--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ https://github.com/taipeiartbookfair-doublegrass/taipeiartbookfair.github.io -->
     <title>草率季Taipei Art Book Fair</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="font.css" />
-
+    <link rel="shortcut icon" href="image/icon-1.ico" />
     <!-- jquery這裡 -->
     <script src="jquery-ui-1.14.1/external/jquery/jquery.js"></script>
     <link
