--- a/localapplication.html
+++ b/localapplication.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>草率季Taipei Art Book Fair</title>
+    <link rel="shortcut icon" href="image/icon-1.ico" />
     <link rel="stylesheet" href="opencall.css" />
     <link rel="stylesheet" href="font.css" />
     <!-- jquery這裡 -->
