--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- force rebuild -->
 <!-- This website's front-end is designed and rushly coded by Nai-Syuan Ye(cherrythehuman).
 Po-Chen Yeh and Bo-yu Yeh are the back-end developers. This serves merely as a buffering site before the true 2025 TPABF site is up.
 
