--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@ https://github.com/taipeiartbookfair-doublegrass/taipeiartbookfair.github.io -->
         }
       });
     </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-EPSXJPDH6L"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-EPSXJPDH6L");
+    </script>
   </head>
   <body>
     <img
