--- a/localapplication.html
+++ b/localapplication.html
@@ -15,6 +15,21 @@
     />
     <script src="jquery-ui-1.14.1/jquery-ui.js"></script>
     <script src="main.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-EPSXJPDH6L"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-EPSXJPDH6L");
+    </script>
   </head>
   <body>
     <iframe
