--- a/application-received.html
+++ b/application-received.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>草率季Taipei Art Book Fair</title>
+    <title>申請成功 - 草率季Taipei Art Book Fair</title>
     <link rel="shortcut icon" href="image/icon-1.ico" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="font.css" />
