--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -660,8 +660,10 @@
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">
-            Required Question. Please upload <strong>PDF</strong> file. Maximum
-            size: <strong>10 A4, 8MB</strong>.
+            Required Question. Please upload
+            <strong>one compiled PDF</strong> file. Maximum size:
+            <strong>10 A4 pages, 8MB</strong>. Do not upload multiple PDF files.
+            If you have more than one page, combine them into a single PDF.
           </span>
 
           <input type="file" id="fileInput" name="file" />
