--- a/localapplication.html
+++ b/localapplication.html
@@ -442,10 +442,10 @@
           id="uploadArtwork-l"
           style="display: none"
         >
-          <span class="from-description-header-ness"
-            >必填問題、請上傳PDF檔、檔案上限：<strong
-              >最多 10 頁 A4，檔案大小不超過 8MB</strong
-            ></span
+          <span class="from-description-header-ness">
+            必填問題，請上傳<strong>一份合併好的 PDF 檔案</strong
+            >，上限為<strong>最多 10 頁 A4、檔案大小不超過 8MB</strong
+            >。請勿上傳多個 PDF，如有多頁內容，請合併成一份 PDF 上傳。 </span
           ><br />
           <div class="upload-container">
             <input type="file" id="fileInput" name="file" />
@@ -474,10 +474,10 @@
           id="proposalLink-l"
           style="display: none"
         >
-          <span class="from-description-header-ness"
-            >必填問題、請上傳PDF檔、檔案上限：<strong
-              >最多 20 頁 A4，檔案大小不超過 10MB</strong
-            ></span
+          <span class="from-description-header-ness">
+            必填問題，請上傳<strong>一份合併好的 PDF 檔案</strong
+            >，上限為<strong>最多 10 頁 A4、檔案大小不超過 8MB</strong
+            >。請勿上傳多個 PDF，如有多頁內容，請合併成一份 PDF 上傳。 </span
           ><br />
           <div class="upload-container">
             <input type="file" id="fileInput2" name="file" />
