safari font adjustment

--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@ https://github.com/taipeiartbookfair-doublegrass/taipeiartbookfair.github.io -->
     <!-- Date & Location -->
     <div class="info">
       <div>
-        2025 草率季 Taipei Art Book Fair<br /><br />
+        2025 草率季 Taipei Art Book Fair<br />
+        - Soft POW 無限柔軟 -<br /><br />
         [時間Time] 2025.11.21–23
         <br />
         &nbsp;&nbsp;- 11/21(Fri.) 13-21 <br />
