--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -662,8 +662,8 @@
           <span class="from-description-header-ness">
             Required Question. Please upload
             <strong>one compiled PDF</strong> file. Maximum size:
-            <strong>10 A4 pages, 8MB</strong>. Do not upload multiple PDF files.
-            If you have more than one page, combine them into a single PDF.
+            <strong>10 A4 pages, 8MB</strong>. Do not upload multiple files. If
+            you have more than one file, combine them into a single PDF.
           </span>
 
           <input type="file" id="fileInput" name="file" />
