typo oopsie doosie

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -50,7 +50,7 @@
       method="post"
     >
       <div style="font-size: 1rem; text-align: center; font-weight: 600">
-        Oversea Applicarion<br />TAIPEI ART BOOK FAIR OPEN CALL
+        Oversea Application<br />TAIPEI ART BOOK FAIR OPEN CALL
       </div>
       <div style="font-size: 0.7rem; text-align: center; font-weight: 600">
         For local application, please proceed to →
