--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -820,10 +820,10 @@
         <!-- 十年特場 -->
         <div class="column">
           <span class="from-header"
-            >2026 Spring TPABF 10-year anniversary fair！ </span
+            >2026 Spring TPABF 10-year anniversary fair! </span
           ><br />
           TPABF 10-year anniversary fair is going to take place in Spring (March
-          or April.) Please indicate whether you are interested in participating
+          or April). Please indicate whether you are interested in participating
           as an exhibitor.
         </div>
 
@@ -887,7 +887,8 @@
           <span class="from-header">Login Password</span>
           This password will be use for the registration of website accounts.
           <strong>Once registered, it cannot be modified.</strong> If you
-          registered multiple times, we will use the first password you entered.
+          registered multiple times, we will used the first password you
+          entered.
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">Required Question</span>
