aggrement grammar and content modify

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -974,42 +974,48 @@
           <ol class="from-ol">
             <li>
               In order to support the creation of art books, priority will be
-              given to creators who continue to create. It is recommended to
-              attach recent works and personal social media or websites to the
-              application form for selection reference.
+              given to creators who are currently active. It is recommended to
+              upload your most recent portfolio or work, as well as personal
+              social media links or websites, in the application form for
+              reference during the selection process.
             </li>
             <li>
-              Taipei Art Book Fair encourages creators to create ideas and
-              arrange booths according to the theme of each session, and this
-              will also be included in the booth review and sloppy award
-              indicators. Welcome everyone to use your imagination together.
+              Taipei Art Book Fair encourages participants to develop booth
+              ideas that respond to the theme of each edition. The relevance to
+              the theme will also be considered during the booth selection
+              process and in the evaluation for the Sloppy Award. We welcome
+              everyone to bring their imagination to life!
             </li>
             <li>
-              The organizer will provide corresponding equipment, space and site
-              location for different booth types. After application, no
-              adjustments will be accepted. Please be sure to choose the most
-              suitable booth type according to your needs. If you need to modify
-              it, please fill in the registration form again.
+              The organizer will provide appropriate equipment, space, and
+              location based on the selected booth type.
+              <i
+                >No changes can be made after submission, so please choose the
+                booth type that best fits your needs.</i
+              >
+              If you need to make changes, you’ll need to submit a new
+              registration form.
             </li>
             <li>
-              The admission notice will be sent by Email, please pay attention
-              to incoming mail & junk mail, no further notice will be given if
-              you are not admitted.
+              Admission results will be sent via email. Please check both your
+              inbox and junk mail folder. If you are not admitted, no additional
+              notification will be provided.
             </li>
             <li>
-              The actual table size will be notified at the time of application
-              accepted, detailed information and additional purchase of work
-              permits will be provided.
+              The exact table size will be confirmed upon acceptance of your
+              application. Detailed information, including the option to
+              purchase additional work permits, will also be provided at that
+              time.
             </li>
           </ol>
         </div>
         <div class="column layout-form-column-grid-2">
           <span class="from-description-header">
             <br />
-            I have read the information above, and agree toa abide by the rules
-            of this solicitation. If there are any unfinished matters, the
-            organizer reserves the right to explain, modify and supplement the
-            content of the event method and detailed rules.
+            have read the information above and agree to abide by the rules of
+            this call for submissions. The organizer reserves the right to
+            interpret, modify, or supplement the event details and rules in the
+            case of any unresolved matters.
           </span>
           <input
             type="checkbox"
