small changes for the notice before submit

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -1034,9 +1034,10 @@
       <div class="module-form layout-form-columnized">
         <div class="column">
           <span class="from-description-header">
-            Please double-check your information. You will receive an automated
-            confirmation Email once we have received your application. Please
-            check your Spam folders if you haven’t received your Email.
+            Please double-check your information before submitting. You will
+            receive an automated confirmation email once your application has
+            been received. If you do not see it in your inbox, please check your
+            spam or junk folder.
           </span>
         </div>
         <div class="column">
