--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -1012,7 +1012,7 @@
         <div class="column layout-form-column-grid-2">
           <span class="from-description-header">
             <br />
-            have read the information above and agree to abide by the rules of
+            I have read the information above and agree to abide by the rules of
             this call for submissions. The organizer reserves the right to
             interpret, modify, or supplement the event details and rules in the
             case of any unresolved matters.
