--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -973,7 +973,7 @@
         <div class="column">
           <ol class="from-ol">
             <li>
-              In order to support the creation of art books, priority will be
+              In order to support the art book practices, priority will be
               given to creators who are currently active. It is recommended to
               upload your most recent portfolio or work, as well as personal
               social media links or websites, in the application form for
