no auto complete password

--- a/localapplication.html
+++ b/localapplication.html
@@ -694,12 +694,13 @@
             <input
               id="password"
               type="password"
-              autocomplete="new-password"
+              autocomplete="off"
               class="form-input"
               name="entry.174970451"
               placeholder="Password"
               maxlength="500"
               required
+              spellcheck="false"
               style="padding-right: 30px"
             />
             <button
