--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -895,14 +895,17 @@
           <div style="position: relative">
             <input
               id="password"
-              type="password"
-              autocomplete="new-password"
-              class="form-input"
+              type="text"
+              inputmode="none"
               name="entry.1848520839"
               placeholder="Password"
               maxlength="500"
               required
+              class="form-input"
               style="padding-right: 60px"
+              autocomplete="off"
+              spellcheck="false"
+              aria-hidden="true"
             />
             <button
               type="button"
@@ -973,11 +976,11 @@
         <div class="column">
           <ol class="from-ol">
             <li>
-              In order to support the art book practices, priority will be
-              given to creators who are currently active. It is recommended to
-              upload your most recent portfolio or work, as well as personal
-              social media links or websites, in the application form for
-              reference during the selection process.
+              In order to support the art book practices, priority will be given
+              to creators who are currently active. It is recommended to upload
+              your most recent portfolio or work, as well as personal social
+              media links or websites, in the application form for reference
+              during the selection process.
             </li>
             <li>
               Taipei Art Book Fair encourages participants to develop booth
