local change to text not password

--- a/localapplication.html
+++ b/localapplication.html
@@ -693,7 +693,7 @@
           <div style="position: relative">
             <input
               id="password"
-              type="password"
+              type="text"
               autocomplete="off"
               class="form-input"
               name="entry.174970451"
@@ -702,6 +702,7 @@
               required
               spellcheck="false"
               style="padding-right: 30px"
+              aria-hidden="true"
             />
             <button
               type="button"
