proofread by cheeeery

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -86,7 +86,7 @@
         <!--Participated In-->
         <div class="column">
           <span class="from-header">Have you participated before?</span>
-          Have you ever participated as an exhibitor in previous?
+          Have you ever participated as an exhibitor in previous years?
         </div>
         <div class="column layout-form-column-grid-2">
           <span class="from-description-header-ness">Required Question</span>
@@ -125,8 +125,6 @@
           <span class="from-sub-header"
             >Please tell us the years you have participated</span
           >
-          Please tell us the years during which you have participated in our
-          events.
         </div>
         <div
           class="column layout-form-column-grid-4 question-ParticipatedYears"
@@ -230,15 +228,15 @@
         <!--Preferred Booth Type-->
         <div class="column">
           <span class="from-header">Select the type of booth</span>
-          The organizer will provide corresponding equipment, space, and
-          location based on the selected booth type. Once the application is
-          submitted, no adjustments will be accepted. Please select the booth
-          type that best meets your needs. If modifications are necessary, you
-          will need to complete the registration form again.
+          The organizer will allocate equipment, space, and location according
+          to the selected booth type. Once the application is submitted, changes
+          cannot be made. Please choose the booth type that best suits your
+          needs. If modifications are required, you will need to resubmit the
+          registration form.
           <br />
           <br />
-          Detailed information about table sizes and the option to purchase
-          additional work permits will be provided upon application approval.
+          Details regarding table sizes and the option to purchase additional
+          work permits will be provided upon approval of your application.
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">Required Question</span>
@@ -653,10 +651,10 @@
           If applying for a curation booth, include your booth curatorial/design
           plans and work list.
           <br /><br />
-          The Taipei Art Book Fair encourages creators to design booths
-          according to the theme of each session; this will also be considered
-          in the booth review process. We welcome everyone to use their
-          imagination.
+          Taipei Art Book Fair encourages creators to design their booths in
+          line with each year's theme, which will also be taken into account
+          during the booth selection process. We welcome everyone to use their
+          imagination and be creative!
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">
@@ -764,10 +762,10 @@
           <span class="from-sub-header"
             >When Insufficient Information Is Provided by the Exhibitor</span
           >
-          Do you agree to the Taipei Art Book Fair team accessing and using
-          necessary data from your Facebook, Instagram, and official website for
-          marketing and media purposes related to the 2024 Taipei Art Book Fair
-          only?
+          If insufficient information is provided by the exhibitor, do you agree
+          to allow the Taipei Art Book Fair team to access and use relevant data
+          from your Facebook, Instagram, and official website for marketing and
+          media purposes related solely to the 2025 Taipei Art Book Fair?
         </div>
         <div
           class="column layout-form-column-grid-2 question-InsufficientInformation"
