--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -646,7 +646,7 @@
 
         <div class="column">
           <span class="from-header"
-            >Work Images or Curation Booth Design Plan</span
+            >Portfolio or Curation Booth Design Plan</span
           >
           If applying for a curation booth, include your booth curatorial/design
           plans and work list.
@@ -723,7 +723,7 @@
         <div class="column">
           <span class="from-header">Promotion Content</span>
           Do you agree to the use of your provided content and information for
-          promotional purposes by the 2024 Taipei Art Book Fair team?
+          promotional purposes by the 2025 Taipei Art Book Fair team?
         </div>
         <div class="column layout-form-column-grid-2">
           <span class="from-description-header-ness">Required Question</span>
