proofread by cherry again

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -648,8 +648,8 @@
           <span class="from-header"
             >Portfolio or Curation Booth Design Plan</span
           >
-          If applying for a curation booth, include your booth curatorial/design
-          plans and work list.
+          If you are applying for a curation booth, please include your
+          curatorial/design plan and a list of works.
           <br /><br />
           Taipei Art Book Fair encourages creators to design their booths in
           line with each year's theme, which will also be taken into account
