proofread by cherry

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -661,7 +661,7 @@
             Required Question. Please upload
             <strong>one compiled PDF</strong> file. Maximum size:
             <strong>10 A4 pages, 8MB</strong>. Do not upload multiple files. If
-            you have more than one file, combine them into a single PDF.
+            you have more than one file, combine them into <u>a single PDF</u>.
           </span>
 
           <input type="file" id="fileInput" name="file" />
