styling for easy read

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -231,8 +231,11 @@
           The organizer will allocate equipment, space, and location according
           to the selected booth type. Once the application is submitted, changes
           cannot be made. Please choose the booth type that best suits your
-          needs. If modifications are required, you will need to resubmit the
-          registration form.
+          needs.
+          <u
+            >If modifications are required, you will need to resubmit the
+            registration form</u
+          >.
           <br />
           <br />
           Details regarding table sizes and the option to purchase additional
