--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -848,8 +848,8 @@
         <!--Name of Person in Charge-->
         <div class="column">
           <span class="from-header">Name of Person in Charge</span>
-          If you are exhibiting as a corporation, group, or other collective,
-          you must select a supervisor for your booth.
+          If you are exhibiting as a corporation, group, or collective, you must
+          designate a representative for your booth.
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">Required Question</span>
@@ -867,7 +867,7 @@
         <div class="column">
           <span class="from-header">Email</span>
           This email will be used for future notifications and registration of
-          website accounts. Once registered, it cannot be modified. The
+          website accounts. <i>Once registered, it cannot be modified.</i> The
           admission notice will be sent to this email. Please check your inbox
           and spam folder regularly.
         </div>
@@ -958,7 +958,7 @@
         <!--Further Questions-->
         <div class="column">
           <span class="from-header">I Have Something to Say!</span>
-          If you have any further questions or opinions, please leave your
+          If you have any further questions or comments, please leave your
           message here.
         </div>
         <div class="column layout-form-column-grid-1">
