small description changes

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -63,8 +63,8 @@
         <div class="column">
           <span class="from-header">Exhibitor's Name</span><br />
           <span class="smalltext"
-            >Your inputted content will be officially displayed on the website
-            and on the search tag.</span
+            >Your inputted content will be officially displayed on the website ,
+            the search tag and the catalog.</span
           >
         </div>
         <div class="column layout-form-column-grid-1">
