style bug catch

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -257,7 +257,7 @@
               >&nbsp;USD$165 incl. tax</span
             ><br />
             <span class="from-label-description-header">
-              Includes: 120 × 60 cm table ×1, chairs ×2, passes ×2, TPABF
+              Includes: 120 × 60 cm table ×1, chairs ×2, passes ×2, 2025 TPABF
               Catalog ×1 (one page featured)
             </span>
           </label>
@@ -275,7 +275,7 @@
               >&nbsp;USD$330 incl. tax</span
             ><br />
             <span class="from-label-description-header">
-              Includes: 120 × 60 cm table ×2, chairs ×4, passes ×4, TPABF
+              Includes: 120 × 60 cm table ×2, chairs ×4, passes ×4, 2025 TPABF
               Catalog ×1 (one page featured)
             </span>
           </label>
@@ -294,7 +294,7 @@
             ><br />
             <span class="from-label-description-header">
               Includes: 3M*3M space, 120 × 60 cm table ×2, chairs ×4, passes ×3,
-              TPABF Catalog ×1 (one page featured)
+              2025 TPABF Catalog ×1 (one page featured)
             </span>
           </label>
         </div>
@@ -583,7 +583,7 @@
         <div class="column">
           <span class="from-header">Bio</span>
           Please describe yourself and the works you plan to exhibit at the
-          Taipei Art Book Fair in less than 500 words. This information will be
+          Taipei Art Book Fair in 500 words or less. This information will be
           published on our website.
         </div>
         <div class="column layout-form-column-grid-1">
@@ -602,8 +602,8 @@
         <!--Work Links-->
         <div class="column">
           <span class="from-header">Catagory</span>
-          The submitted content will be publicly displayed on the official
-          website’s directory and tags.
+          The selected option will be publicly displayed in the official
+          website's directory and tags.
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">Required Question</span>
@@ -626,7 +626,6 @@
         <!-- 作品詳細類別 -->
         <div class="column">
           <span class="from-header">Sub-catagory</span>
-          This information will be published on our website.
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">Required Question</span>
@@ -762,7 +761,7 @@
 
         <!--Insufficient Information-->
         <div class="column question-InsufficientInformation">
-          <span class="from-sub-header"
+          <span class="from-header"
             >When Insufficient Information Is Provided by the Exhibitor</span
           >
           If insufficient information is provided by the exhibitor, do you agree
