restyling important information

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -866,9 +866,10 @@
         <div class="column">
           <span class="from-header">Email</span>
           This email will be used for future notifications and registration of
-          website accounts. <i>Once registered, it cannot be modified.</i> The
-          admission notice will be sent to this email. Please check your inbox
-          and spam folder regularly.
+          website accounts.
+          <strong>Once registered, it cannot be modified.</strong> The admission
+          notice will be sent to this email. Please check your inbox and spam
+          folder regularly.
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">Required Question</span>
