--- a/localapplication.html
+++ b/localapplication.html
@@ -445,7 +445,8 @@
           <span class="from-description-header-ness">
             必填問題，請上傳<strong>一份合併好的 PDF 檔案</strong
             >，上限為<strong>最多 10 頁 A4、檔案大小不超過 8MB</strong
-            >。請勿上傳多個 PDF，如有多頁內容，請合併成一份 PDF 上傳。 </span
+            >。請勿上傳多個 PDF，如有多頁內容，請合併成<u>一份 PDF 上傳</u
+            >。 </span
           ><br />
           <div class="upload-container">
             <input type="file" id="fileInput" name="file" />
